# Jilu

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  vite.config.ts
src/: ai-operations.ts  ai-service.ts  audio-devices.ts  calendar-service.ts  constants.ts  custom-dictionary.ts  database.ts  dom.ts  file-export.ts  icons.ts  init-icons.ts  main.ts  meeting-operations.ts  notification-actions.ts  notification-types.ts  notifications.ts  prompt-templates.ts  recording.ts  secure-storage.ts  speaker-id.ts  state.ts  styles.css  tasks.ts  template-processor.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json  tauri.conf.local.example.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: calendar.rs  lib.rs  main.rs  power.rs
src/ai-service/: ai-service.ts  chat-options.ts  chat.ts  chunking.ts  completions.ts  context.ts  dynamic-areas.ts  enhance.ts  errors.ts  index.ts  response-content.ts  summaries.ts  title.ts  token-utils.ts  transcript-format.ts  types.ts
src/database/: calendar.ts  core.ts  dictionary.ts  index.ts  meetings.ts  people.ts  serialization.ts  tasks.ts
src/file-export/: export-operations.ts  export-settings.ts  html-converter.ts  index.ts
src/prompt-templates/: built-in-templates.ts  index.ts  template-storage.ts  template-validation.ts
src/ui/: calendar.ts  chat.ts  custom-dictionary.ts  editor.ts  find.ts  interactions.ts  onboarding.ts  people.ts  settings.ts  sidebar.ts  tabs.ts  tags.ts  (+4 more)
(+26 files in other folders)
