[package]
name = "jilu"
version = "0.1.0"
description = "Jilu - Mindful meeting recorder for macOS. Records, transcribes, and remembers conversations with AI assistance."
authors = ["Jilu Contributors"]
license = "MIT"
repository = "https://github.com/stuartw843"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jilu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
bytemuck = { version = "1.14", features = ["extern_crate_std"] }
parking_lot = "0.12"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
chrono = "0.4"
block = "0.1"
tauri-plugin-stronghold = "2"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "0.3"
core-foundation = "0.10"
cocoa = "0.24"
objc = "0.2"
